docs/v0.11/_sources/index.rst.txt
################################################
MedØlDatschgerl
################################################

.. toctree::
    :maxdepth: 1
    :numbered:
    
    installation
    libmod/libmod
    pymod/pymod
    postmod/postmod
    modWrapper/modWrapper
    epim/epim
    dataDesc/dataDesc
    dgStrat/dgStrat
    examples/index
    
    knownIssues
    changes
    references


.. _overview:

Overview
========

This is the documentation for the MedØlDatschgerl (MØD) software package.
The sources can be found in the GitHub repository: `<http://github.com/jakobandersen/mod>`_.
For additional information see the webpage: `<http://mod.imada.sdu.dk>`_.

The package contains the following components.

* libMØD, shared library (``mod``)
    The main library.
* PyMØD, Python 3 module (``mod``)
    Python bindings for the library and extra functionality for easier usage of
    many features.
    It additionally include the submodule :ref:`epim`.
*  PostMØD, Bash Script (``mod_post``)
    The post processor for compiling figures and summaries.
* The wrapper script, Bash Script (``mod``)
    A convenience wrapper for invoking a virtual machine (e.g., ``python3``)
    with user-supplied code.
    The wrapper handles output and invokes the post processor.
    Additionally, it can run the chosen virtual machine through ``gdb``
    and/or ``valgrind`` (either normal memcheck or callgrind).


Contributors
============

* `Jakob Lykke Andersen <https://imada.sdu.dk/~jlandersen>`__: main author.
* `Nikolai Nøjgaard <https://imada.sdu.dk/~nojgaard>`__: author of :ref:`EpiM`.


